# gwmilter

./: .clang-format  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CURSOR.md  DEV_GUIDE.md  README.md  config.ini
.github/workflows/: Dockerfile.unit-tests  ci.yml  claude-code-review.yml  claude.yml  unit-tests.yml
cmake/: bootstrap-and-configure.sh
data/: email_body_replacement.txt  main_page_if_missing.txt  replacement.txt
integrations/: README.md  dev.sh  docker-compose-no-gwmilter.yaml  docker-compose-tests.yaml  docker-compose.yaml  key_list.txt
integrations/gwmilter/: Dockerfile  config.ini.template  entrypoint.sh  key-generator.sh
integrations/gwmilter/data/: email_body_replacement.txt  main_page_if_missing.txt
integrations/key-generator/: Dockerfile  README.md  key-generator.sh
integrations/key-server/: Dockerfile  README.md  app.py  requirements.txt
integrations/postfix/: Dockerfile  entrypoint.sh  main.cf.template
integrations/tests-runner/: Dockerfile  README.md  entrypoint.sh
src/: main.cpp  signal_manager.cpp  signal_manager.hpp
src/cfg/: cfg.cpp  cfg.hpp
src/cfg2/: MIGRATION.md  config.cpp  config.hpp  config_manager.cpp  config_manager.hpp  config_node.hpp  config_node_tests.cpp  config_tests.cpp  core.hpp  demo.cpp  deserializer.hpp  deserializer_tests.cpp  dynamic_section.cpp  dynamic_section.hpp  dynamic_section_tests.cpp  enums.hpp  ini_config.cpp  ini_config.hpp  ini_reader.cpp  ini_reader.hpp  ini_reader_tests.cpp  memory_safety_test.cpp  multiple_same_type_test.cpp  section_registry.cpp  section_registry.hpp  signal_handler.cpp  signal_handler.hpp  tree_node.hpp
src/cfg2/testdata/: config.ini  demo_config.ini
src/handlers/: body_handler.cpp  body_handler.hpp  body_handler_base_tests.cpp  headers.hpp  noop_body_handler.cpp  noop_body_handler_tests.cpp  pdf_body_handler.cpp  pdf_body_handler_tests.cpp  pgp_body_handler.cpp  pgp_body_handler_tests.cpp  smime_body_handler.cpp  smime_body_handler_tests.cpp
src/logger/: logger.cpp  logger.hpp  spdlog_init.cpp  spdlog_init.hpp
src/milter/: milter.cpp  milter.hpp  milter_callbacks.cpp  milter_callbacks.hpp  milter_connection.cpp  milter_connection.hpp  milter_exception.hpp  milter_message.cpp  milter_message.hpp
src/smtp/: smtp_client.cpp  smtp_client.hpp
src/utils/: dump_email.cpp  dump_email.hpp  string.cpp  string.hpp  string_tests.cpp  uid_generator.cpp  uid_generator.hpp  uid_generator_tests.cpp
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  test_pgp.py
tests/eml/: multipart_alternative.eml  multipart_mixed_binary_attachment.eml  multipart_mixed_text_attachment.eml  text_html.eml  text_plain.eml
tests/scripts/: pgp-utils.sh
tests/utils/: email_utils.py  gnupg_utils.py  mailpit_client.py
